--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,7 +8,7 @@
   margin-top: 92px;
   margin-bottom: 92px;
   text-align: center;
-  background: url(/images/__background.png);
+  background: url(../../images/__background.png);
   position: relative;
   background-size: 1184px;
   background-position: center;
