--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,6 @@
 .footer__copyright {
   font-family: "Inter";
-  font-style: Regular;
+  font-style: "regular";
   font-size: 14px;
   line-height: 16px;
 }
