--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,12 +1,21 @@
 .footer__link {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 18px;
-    /* identical to box height, or 112% */
-  
-    color: #ffffff;
-    margin-right: 18px;
-    padding: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 18px;
+  /* identical to box height, or 112% */
+
+  color: #ffffff;
+  margin-right: 18px;
+  padding: 0;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+    text-decoration: none;
+    margin-bottom: 12px;
   }
+}
