--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -7,3 +7,13 @@
     padding: 0;
     margin-bottom: 24px;    
 }
+
+@media screen and (max-width: 767px) {
+    .footer__link {
+      font-size: 24px;
+      line-height: 1;
+      text-decoration: none;
+      margin-bottom: 32px;
+    }
+  }
+  
