--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,8 +1,7 @@
 .intro__text {
   max-width: 690px;
-  font-family: 'Inter', sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.63;
-  color: #FFFFFF;
+  color: #ffffff;
 }
