--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -7,7 +7,7 @@
   margin: 0 auto 92px;
   grid-gap: 16px;
   max-width: 1344px;
-  padding: 48px 0;
+  padding:  0;
 }
 
 @media screen and (max-width: 1279px){
