--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,4 @@
 .place__paragraph {
-  font-family: "Inter", sans-serif;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.63;
@@ -8,6 +7,13 @@
   margin-bottom: 26px;
   display: block;
 }
+
+.place__paragraph:last-child {
+ 
+  margin-bottom: 0;
+  
+}
+
 @media screen and (max-width: 767px) {
   .place__paragraph {
     font-size: 16px;
