--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,8 +1,23 @@
 .place__title {
-  font-family: 'Inter', sans-serif;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 0;
+  margin-top: 0;
+}
+
+@media screen and (max-width: 1023px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
   }
+}
+
+@media screen and (max-width: 767px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 1.09;
+    margin-left: 16px;
+  }
+}
