--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,4 +1,10 @@
 .place__website {
   align-self: end;
+}
+
+@media screen and (max-width: 767px) {
+  .place__website {
+    padding: 0 16px;
+    align-self: start;
   }
-  
+}
