--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,27 +1,27 @@
 .cover__link {
-  text-decoration: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
   width: 100%;
   max-width: 1184px;
-  color: #ffffff;
+  text-decoration: none;
+  color: #FFFFFF;
 }
 @media screen and (max-width: 1279px) {
-  .cover__link_overlay {
+  .cover__link {
     min-height: 640px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .cover__link_overlay {
+  .cover__link {
     min-height: 480px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .cover__link_overlay {
+  .cover__link {
     min-height: 200px;
   }
 }
