--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,24 +1,18 @@
 .cover__subtitle {
-  padding-top: 32px;
-  width: 360px;
-  margin: auto;
-  font-style: normal;
+  max-width: 360px;
   font-weight: normal;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   text-align: center;
-
   color: #ffffff;
+  margin: 0;
 }
 
-
-
-
-  
 @media screen and (max-width: 767px) {
-.cover__subtitle {
+  .cover__subtitle {
     max-width: 260px;
     font-size: 14px;
     line-height: 1.14;
     margin-bottom: 33px;
-}}
+  }
+}
