--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,24 +1,21 @@
 .cover__title {
-  width: 560px;
-  margin: auto;
-  margin-top: 245px;
-  margin-bottom: 32px;
-  font-style: normal;
+  max-width: 560px;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.06;
   text-align: center;
   color: #ffffff;
-  text-decoration: none;
+  margin-top: 245px;
+  margin-bottom: 32px;
 }
 
 @media screen and (max-width: 1279px) {
   .cover__title {
-    margin-top: 115px;
+    margin-top: 195px;
   }
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
   .cover__title {
     margin-top: 115px;
   }
