--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,21 +1,16 @@
 .cover {
-  /* width: 100%; */
-  max-width: 1184px;
-  min-height: 740px;
-
-  margin: 0 auto;
-  padding: 0;
-  margin-top: 92px;
-  margin-bottom: 92px;
-  text-align: center;
   background: url(../../images/__background.png);
-  position: relative;
+  width: 100%;
+  min-height: 740px;
   background-size: 1184px;
   background-position: center;
   background-repeat: no-repeat;
-  z-index: 0;
+  margin: 0;
+  padding: 0;
+  margin-top: 92px;
+  margin-bottom: 92px;
 }
-.cover::after {
+/* .cover::after {
   content: "";
   position: absolute;
   top: 0;
@@ -27,15 +22,14 @@
   z-index: -1;
 }
 .cover:hover::after {
-  opacity: 0.7;
+  opacity: 0.8;
   cursor: pointer;
-}
+} */
 
 @media screen and (max-width: 1279px) {
   .cover {
     min-height: 640px;
     background-size: 1024px;
-    max-width: 1024px;
   }
 }
 @media screen and (max-width: 1023px) {
@@ -44,16 +38,13 @@
     background-size: 768px;
     margin-top: 90px;
     margin-bottom: 88px;
-    max-width: 768px;
   }
 }
-
 @media screen and (max-width: 767px) {
   .cover {
     min-height: 200px;
     background-size: 320px;
     margin-top: 66px;
     margin-bottom: 64px;
-    max-width: 320px;
   }
 }
