--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,16 @@
 .footer__copyright {
-  font-style: "regular";
+  font-weight: normal;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
+  text-align: right;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    text-align: left;
+    line-height: 1;
+  }
 }
