--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,21 +1,20 @@
 .footer__link {
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 18px;
-  /* identical to box height, or 112% */
-
+  line-height: 1.12;
   color: #ffffff;
-  margin-right: 18px;
-  padding: 0;
   text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 767px) {
   .footer__link {
     font-size: 24px;
     line-height: 1;
-    text-decoration: none;
-    margin-bottom: 12px;
   }
 }
