--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,19 +1,16 @@
 .footer__links {
-    display: flex;
-    flex-wrap: wrap;
-    /* column-gap: 18px; */
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 24px;    
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 18px;
+  list-style: none;
 }
 
 @media screen and (max-width: 767px) {
-    .footer__link {
-      font-size: 24px;
-      line-height: 1;
-      text-decoration: none;
-      margin-bottom: 32px;
-    }
+  .footer__links {
+    flex-direction: column;
+    margin-bottom: 48px;
+    row-gap: 32px;
   }
-  
+}
