--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,11 @@
 .footer {
   display: flex;
   justify-content: space-between;
+  box-sizing: border-box;
   max-width: 1184px;
   padding: 0;
   margin: 0 auto;
+  padding-bottom: 24px;
 }
 
 @media screen and (max-width: 1279px) {
@@ -22,9 +24,8 @@
   .footer {
     flex-direction: column;
     justify-content: start;
-    max-width: 186px;
-    /* margin-bottom: 24px; */
-    margin-left: 16px;
-    padding-bottom: 24px;
+    margin: 0;
+    padding-left: 16px;
+    /* max-width: 186px; */
   }
 }
