--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,15 +1,15 @@
 .header__lang-link {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 1.17;
-  margin-right: 18px;
-  color: #ffffff;
+  color: white;
+  text-decoration: none;
+  transition: opacity 0.2s ease-in;
 }
 
-.header__lang-link:last-of-type {
-  text-decoration: none;
-  margin-right: 0;
+.header__lang-link:hover {
+  opacity: 0.8;
+}
+
+.header__lang-link:not(:last-child) {
+  margin-right: 18px;
 }
 
 @media screen and (max-width: 767px) {
