--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,4 +1,19 @@
 .header__lang-links {
-  display: block;
-  
+  display: flex;
+  list-style: none;
+  color: white;
+  text-decoration: none;
+  align-items: center;
+  font-size: 24px;
 }
+
+
+
+/* @media (max-width: 425px) {
+  .lang-links {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 20px;
+  }
+} */
