--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,9 @@
 .intro__list {
   list-style: none;
-  font-weight: normal;
+  color: white;
   font-size: 12px;
-  line-height: 1.5;
-  color: #ffffff;
+  line-height: 18px;
+  font-weight: 700;
+  margin: 0;
   padding: 0;
 }
