--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,6 +5,8 @@
   font-size: 54px;
   line-height: 1.07;
   color: #ffffff;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 @media screen and (max-width: 767px) {
