--- a/blocks/lead/__caption/lead_caption.css
+++ b/blocks/lead/__caption/lead_caption.css
@@ -6,5 +6,16 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
   color: #ffffff;
+  margin: 0;
   margin-top: 8px;
+}
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+@media (max-width: 320px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
