--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,7 +5,14 @@
   line-height: 1.2;
   text-align: center;
   color: #ffffff;
+  margin: 0;
   margin-bottom: 64px;
+}
+
+@media (max-width: 1024px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+  }
 }
 
 @media screen and (max-width: 767px) {
