--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,14 +1,21 @@
 .lead__title {
-
   max-width: 720px;
+  margin: 0;
+  padding: 0;
+  margin-top: 56px;
   margin-bottom: 32px;
-
   color: #ffffff;
   text-align: center;
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
+}
+
+@media (max-width: 1024px) {
+  .lead__title {
+    margin-top: 48px;
+  }
 }
 
 @media screen and (max-width: 767px) {
