--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -6,6 +6,10 @@
   color: #ffffff;
 }
 
+.place__link:hover {
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 767px) {
   .place__link {
     margin-left: 16px;
