--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,25 +1,30 @@
 .place__paragraph {
-  font-weight: normal;
   font-size: 18px;
   line-height: 1.63;
   color: #ffffff;
   margin-top: 0;
   margin-bottom: 26px;
   display: block;
+  font-weight: 400;
 }
 
 .place__paragraph:last-child {
- 
   margin-bottom: 0;
-  
 }
 
 @media screen and (max-width: 767px) {
   .place__paragraph {
     font-size: 16px;
-    line-height: 1.63;
     margin-left: 16px;
     margin-right: 16px;
     margin-bottom: 25px;
+    line-height: 26px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
   }
 }
