--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -4,6 +4,8 @@
   line-height: 1;
   letter-spacing: 0.2em;
   color: #aaaaaa;
+  text-transform: uppercase;
+  margin: 0 0 12px 0;
 }
 
 @media screen and (max-width: 767px) {
