--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,7 +4,8 @@
 
 @media screen and (max-width: 767px) {
   .place__website {
-    padding: 0 16px;
+    padding: 0;
     align-self: start;
+    margin-left: 0;
   }
 }
