--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,9 +3,9 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("../fonts/Inter-Regular.woff2") format("woff2"),
-    url("../fonts/Inter-Regular.woff") format("woff"),
-    url("../fonts/Inter-Regular.ttf") format("ttf");
+  src: url("./Inter-Regular.woff2") format("woff2"),
+    url("./Inter-Regular.woff") format("woff"),
+    url("./Inter-Regular.ttf") format("ttf");
 }
 
 @font-face {
@@ -13,16 +13,16 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("../fonts/Inter-Black.woff2") format("woff2"),
-    url("../fonts/Inter-Black.woff") format("woff"),
-    url("../fonts/Inter-Black.ttf") format("ttf");
+  src: url("./Inter-Black.woff2") format("woff2"),
+    url("./Inter-Black.woff") format("woff"),
+    url("./Inter-Black.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "Inter";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/Inter-Bold.woff2") format("woff2"),
-    url("../fonts/Inter-Bold.woff") format("woff"),
-    url("../fonts/Inter-Bold.ttf") format("ttf");
+  src: url("./Inter-Bold.woff2") format("woff2"),
+    url("./Inter-Bold.woff") format("woff"),
+    url("./Inter-Bold.ttf") format("ttf");
 }
