--- a/pages/index.css
+++ b/pages/index.css
@@ -1,13 +1,13 @@
-@import url(../styles/normalize.css);
-@import url(../blocks/page/page.css);
+@import url(../vendor/normalize.css);
 @import url(../fonts/fonts.css);
-
+@import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/_underlined/header__lang-link_underlined.css);
 
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
@@ -20,6 +20,7 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__item/intro__item.css);
+@import url(../blocks/intro/__span/intro__span.css);
 
 @import url(../blocks/photo/photo.css);
 @import url(../blocks/photo/__image/photo__image.css);
@@ -38,10 +39,9 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__link/cover__link.css);
+@import url(../blocks/cover/__link/_overlay/cover__link_overlay.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-
-@import url(../blocks/line/line.css);
