--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,27 +1,64 @@
 .cover__link {
+  background: url(../../../images/__background.png);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  width: 100%;
   max-width: 1184px;
+  min-height: 740px;
+  margin: auto;
+  background-size: cover;
+  background-position: center;
+  position: relative;
   text-decoration: none;
-  color: #FFFFFF;
+  z-index: 0;
 }
-@media screen and (max-width: 1279px) {
+
+.cover__link::after {
+  background-color: #2a2c2f;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 0.3;
+  z-index: -1;
+  transition: opacity 0.2s ease-in;
+}
+
+.cover__link:hover::after {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
   .cover__link {
     min-height: 640px;
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1023px) {
   .cover__link {
     min-height: 480px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media (min-width: 550px) and (max-width: 767px) {
+  .cover__link {
+    min-height: 400px;
+  }
+}
+
+@media (min-width: 426px) and (max-width: 550px) {
+  .cover__link {
+    min-height: 300px;
+  }
+}
+
+@media (max-width: 425px) {
   .cover__link {
     min-height: 200px;
+    margin-top: 66px;
   }
 }
