--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,19 +5,19 @@
   line-height: 1.06;
   text-align: center;
   color: #ffffff;
-  margin-top: 245px;
+  margin-top: 0;
   margin-bottom: 32px;
 }
 
 @media screen and (max-width: 1279px) {
   .cover__title {
-    margin-top: 195px;
+    margin-top: 0;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .cover__title {
-    margin-top: 115px;
+    margin-top: 0px;
   }
 }
 
