--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,50 +1,16 @@
 .cover {
-  background: url(../../images/__background.png);
-  width: 100%;
-  min-height: 740px;
-  background-size: 1184px;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin: 0;
-  padding: 0;
   margin-top: 92px;
   margin-bottom: 92px;
 }
-/* .cover::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-color: #2a2c2f;
-  opacity: 0.3;
-  z-index: -1;
-}
-.cover:hover::after {
-  opacity: 0.8;
-  cursor: pointer;
-} */
 
-@media screen and (max-width: 1279px) {
+@media (max-width: 768px) {
   .cover {
-    min-height: 640px;
-    background-size: 1024px;
+    margin: 90px 0 90px;
   }
 }
-@media screen and (max-width: 1023px) {
+
+@media (max-width: 320px) {
   .cover {
-    min-height: 480px;
-    background-size: 768px;
-    margin-top: 90px;
-    margin-bottom: 88px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .cover {
-    min-height: 200px;
-    background-size: 320px;
-    margin-top: 66px;
-    margin-bottom: 64px;
+    margin: 66px 0 64px;
   }
 }
